# AIOps

./: .gitignore  AIOps_Hand_Gaze_Step_Label_Assist_Implementation_Plan.docx  CODEX_CONTEXT.md  README.md  build_labelling_plan.py  pyproject.toml
artifacts/: stategraph_assembly101_80ep_metrics.json
configs/: assembly101_ego30_ablation_wave1.json  assembly101_ego30_ablation_wave10.json  assembly101_ego30_ablation_wave2.json  assembly101_ego30_ablation_wave3.json  assembly101_ego30_ablation_wave4.json  assembly101_ego30_ablation_wave5.json  assembly101_ego30_ablation_wave6.json  assembly101_ego30_ablation_wave7.json  assembly101_ego30_ablation_wave8.json  assembly101_ego30_ablation_wave9.json  assembly101_ego30_experiments.json  assembly101_ego30_final80_composite.json  assembly101_ego30_final80_staged.json  example_procedure.json  industreal_backbone_ablation.json  industreal_component_evidence.json  industreal_roi_evidence.json  industreal_staged_baseline.json  stategraph_assembly101.json  stategraph_psr_stage1.json  stategraph_psr_stage1_large.json  stategraph_psr_stage1_xl.json  stategraph_psr_stage1_xxl.json  stateverify_observer_industreal.json  stateverify_prototype_residual.json  temporal_architecture.json
deliverables/: IndustReal_PSR_Fundamental_Architecture_Proposal.pptx.inspect.ndjson
docs/: architecture_research_plan.md  assembly101_ego30_ablation_wave1.md  assembly101_ego30_ablation_wave10.md  assembly101_ego30_ablation_wave2.md  assembly101_ego30_ablation_wave3.md  assembly101_ego30_ablation_wave4.md  assembly101_ego30_ablation_wave5.md  (+28 more)
web/: app.py  (+1 more)
(+110 files in other folders)
