[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops"
version = "0.1.0"
description = "Egocentric assembly step detection and procedure validation prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["streamlit>=1.36"]
video = ["opencv-python>=4.9"]
train = ["opencv-python>=4.9"]
ml = ["torch>=2.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
